--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,16 @@
-/* .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background: linear-gradient(135deg, #2f3c46 0%, #5c6062 100%);
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
- body{
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  margin: 100px;
- }
  .main{
-  background-color: tomato;
+  background-color: #1e272e;
   padding: 5px 5px 15px 5px;
   border: 3px solid white;
   border-radius: 15px;
@@ -112,13 +79,18 @@ h3 {
   justify-content: space-between;
   width: 100%;
 }
+.task-item:hover{
+  transform: scale(1.03);
+  transition: transform 0.2s ease;
+  background-color: #f6f5f5;
+  cursor: pointer;
+}
 
 .edit-task {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .edit-task input {
   width: 200px;
   padding: 5px;
